<resources>
    <string name="comp1">false</string>
    <string name="comp2">false</string>
    <string name="comp3">false</string>
    <string name="comp4">false</string>
    <string name="comp5">false</string>
    <string name="comp6">false</string>
    <string name="comp7">false</string>
    <string name="banner_ad_unit_id">ca-app-pub-8018946824008626/5105434997</string>
    <string name="admob_interstitial_id">ca-app-pub-8018946824008626/6821756595</string>
    <string name="app_name">Politic</string>
    <string name="continuer">Continuer</string>
    <string name="jouer">Jouer</string>
    <string name="about">A propos</string>
    <string name="credits">Crédits</string>
    <string name="noter">Noter l\'application</string>
    <string name="histoire_politic">L\'histoire de Politic</string>
    <string name="splash_text">Ce jeu est une oeuvre à caractère fictionnel et ne reflète ni les opinions de l\'équipe de production ni la réalité de la vie politique&#8230; du moins, je l\'espère</string>
    <string name="presente">présente</string>
    <string name="scenario">Scénario</string>
    <string name="conception">Scénario</string>
    <string name="developement">Scénario</string>
    <string name="graphismes">Scénario</string>
    <string name="sons_et_musiques">Scénario</string>
    <string name="vous_etes_encore_la">Scénario</string>
    <string name="images">Scénario</string>
    <string name="valere_brable">Valère Brable</string>
    <string name="femti_fire">FemtiFire</string>
    <string name="tashima_charbonnier">Tashima Charbonnier</string>
    <string name="harry_lunts">Harry Lunts</string>
    <string name="vartan">Vartan Arzoumanian</string>
    <string name="gage_skidmore">Gage Skidmore</string>
    <string name="greg_cookie">Greg Cookie</string>
    <string name="martin_wyss">Martin Wyss</string>
    <string name="tobias">Tobias 4242</string>
    <string name="julien_dodeler">Julien Dodeler</string>
    <string name="steven_jambot">Steven Jambot</string>
    <string name="yves_brette">Yves Brette</string>
    <string name="two_steps">Two Steps From Hell</string>
    <string name="chapitres">Chapitres</string>
    <string name="chap1">1 - Jean-Kévin, 15 ans</string>
    <string name="chap2">2 - La revanche de Jean-Mickey</string>
    <string name="chap3">3 - Le cancre de l\'assemblée</string>
    <string name="chap4">4 - Comme un air de guerre mondiale</string>
    <string name="chap5">5 - Un petit pas pour l\'Homme</string>
    <string name="chap6">6 - Randonnée céleste</string>
    <string name="chap7">7 - Quand l\'aléatoire s\'en mêle</string>
    <string name="chap8">8 - L\'apocalypse inter-universelle</string>
    <string name="chap1_titre">Chapitre 1 - Jean-Kévin, 15 ans</string>
    <string name="chap2_titre">Chapitre 2 - La revanche de Jean-Mickey</string>
    <string name="chap3_titre">Chapitre 3 - Le cancre de l\'assemblée</string>
    <string name="chap4_titre">Chapitre 4 - Comme un air de guerre mondiale</string>
    <string name="chap5_titre">Chapitre 5 - Un petit pas pour l\'Homme</string>
    <string name="chap6_titre">Chapitre 6 - Randonnée céleste</string>
    <string name="chap7_titre">Chapitre 7 - Quand l\'aléatoire s\'en mêle</string>
    <string name="chap8_titre">Chapitre 8 - L\'apocalypse inter-universelle</string>
    <string name="rester">Je reste chez moi</string>
    <string name="partir_usa">Je pars aux Etats-Unis pour m\'inspirer de leur modèle électoral</string>
    <string name="vacances">C\'est les vacances!</string>
    <string name="fusillade">Vous êtes mort dans une fusillade</string>
    <string name="grosse_fete_alcool">Grosse fête avec alcool</string>
    <string name="grosse_fete">Grosse fête</string>
    <string name="vosges">Week-end dans les Vosges</string>
    <string name="que_faites_vous">Que faites-vous?</string>
    <string name="sapin">Un sapin vous tombe dessus. Vous passez 58 ans dans le coma et glissez sur une peau de banane à votre réveil</string>
    <string name="alcool">Pris dans l\'ambiance, vous buvez comme un trou. Vous vous réveillez sur une aire d\'autoroute en Pologne sans savoir comment vous êtes arrivé là</string>
    <string name="euros">2€</string>
    <string name="question_prix_entree">Quel est votre prix d\'entrée?</string>
    <string name="non">Non</string>
    <string name="promesse_vote">Une promesse de vote</string>
    <string name="dm_maths">Un DM de maths</string>
    <string name="oui">Oui</string>
    <string name="prix_entree">Fixez-vous un prix d\'entrée?</string>
    <string name="projx">La fête s\'est finie en projet X. Vous vous enfuyez au Mexique, où on vous connaît désormais sous le nom de Don Guacamole</string>
    <string name="prix_excessif">Face à ce prix plus qu\'excessif, vos invités se révoltent. Le mouvement prend une telle ampleur que la 3è Guerre Mondiale est déclarée un mois plus tard</string>
    <string name="secher_cours">Je sèche les cours. La meilleure école, c\'est celle de la vraie vie</string>
    <string name="ploucs_camarades">Je me mêle à mes ploucs de camarades</string>
    <string name="rentree">Votre popularité augmente! C\'est la rentrée ! Que faites-vous?</string>
    <string name="caissier">On pense que vous êtes mort. Vous êtes donc désinscrit de l\'établissement. Armé de votre brevet des collèges, vous cherchez longuement du travail et vous terminez caissier chez Leader Price</string>
    <string name="brute">Choisir la brute</string>
    <string name="intello">Choisir l\'intello</string>
    <string name="suppleant">En vue de l\'élection des délégués, vous devez choisir votre suppléant</string>
    <string name="fail_intello">L\'intello parvient à vous convaincre de renoncer. Il prend votre place et mène aujourd\'hui une carrière politique à succès</string>
    <string name="accident_sport">Suite à un mystérieux accident en cours de sport, le concurrent principal est hors-course</string>
    <string name="jm_pleure">Jean-Mickey quitte la salle en pleurs et vous êtes élu. Félicitations, Monsieur le délégué!</string>
    <string name="lunettes">Tes lunettes sont moches</string>
    <string name="prenom_nul">T\'as un prénom nul</string>
    <string name="dernier_debat">Dernier débat contre votre dernier concurrent: Jean-Mickey Quinconce. Que dites-vous?</string>
    <string name="enleve_lunettes">Jean-Mickey enlève ses lunettes et devient plus populaire que vous</string>
    <string name="complexe_demarches">Face à la complexité des démarches administratives pour faire un passeport, vous préférez vous jeter dans la rivière avec une pierre accrochée au pied</string>
    <string name="vingt_et_un">Votre candidat obtient 21% des voix et n\'est pas élu. Suite à ce cuisant échec, vous quittez définitivement la vie politique</string>
    <string name="inondation_ecole">Suite à des travaux laissant à désirer, l\'école est inondée à la première averse. Votre équipe gère très mal la situation et vous êtes contraint de démissionner</string>
    <string name="coup_de_poing">Les rugbymans prennent mal votre parti-pris pour \'ces lopettes de footeux\'</string>
    <string name="licenciement">Votre candidat vous fait parvenir une lettre de licenciement. En grand fan de foot, il ne peut supporter l\'idée que vous ayez préféré investir dans l\'équipe de rugby</string>
    <string name="charisme_arrosoir">Votre charisme d\'arrosoir vous place à -12% d\'intentions de votes. Vous décidez d\'arrêter les frais et de renoncer</string>
    <string name="choque_paillarde">Votre initiative choque les habitants. Vous êtes contraint de vous retirer de la campagne</string>
    <string name="renoncement">Vous quittez la vie politique et vous laissez Jean-Mickey prendre le pouvoir de la commune et de l\'univers</string>
    <string name="electeurs_peu_convaincus">Les électeurs vous jugent peu convaincant. Vous êtes éliminé au premier tour</string>
    <string name="few_years_later">Nous sommes maintenant quelques années après votre brillante élection de délégués. C\'est bientôt les élections municipales dans votre commune de Bafouille-sur-Meurthe</string>
    <string name="sympathiser_avec_un_candidat">Sympathiser avec un candidat</string>
    <string name="partir_loin">Partir loin</string>
    <string name="vous_devenez_conseiller">Vous devenez conseiller d\'un candidat. Que lui conseillez-vous?</string>
    <string name="organisons_un_discours">Organisons un discours</string>
    <string name="organisons_un_d_bat">Organisons un débat</string>
    <string name="attendons_epuisent">Attendons que les autres candidats s\'épuisent</string>
    <string name="discours_succes">Le discours est un succès. Que faites-vous maintenant?</string>
    <string name="debat_succes">Le débat est un succès. Soir de l\'élection, le dépouillement arrive à son terme</string>
    <string name="voir_resultats">Voir les résultats</string>
    <string name="appeler_police">Appelons la police, on sait jamais</string>
    <string name="prostituees_mineures">L\'autre candidat est surpris avec des prostituées mineures. Votre candidat remporte donc l\'élection !</string>
    <string name="conseiller_maire">Vous êtes désormais conseiller du maire. Que lui conseillez-vous?</string>
    <string name="construire_ecole">Construire une école</string>
    <string name="construire_piscine">Construire une piscine</string>
    <string name="piscine_regain_interet">La piscine apporte un regain d\'intérêt à la commune. Les gens viennent en masse des patelins alentours, ce qui vous permet d\'augmenter vos finances</string>
    <string name="position_investissement">On vous demande votre position quant aux investissements dans les équipes sportives de la commune</string>
    <string name="investir_foot">Investir dans l\'équipe de foot</string>
    <string name="investir_rugby">Investir dans l\'équipe de rugby</string>
    <string name="rugby_champion">L\'équipe de rugby devient championne régionale</string>
    <string name="temps_passe">Le temps passe vite, c\'est déjà l\'heure des élections suivantes. Que faites-vous?</string>
    <string name="marre_sous_fifre">J\'en ai marre d\'être un sous-fifre, je me présente !</string>
    <string name="fidele_candidat">Je suis pas un traître, je reste fidèle à mon candidat</string>
    <string name="d_buter_la_partie">Débuter la partie</string>
    <string name="pre1">Politic, c\'est une histoire qui a débuté en 2014 sur une simple calculatrice Casio 35+. A cette époque, j\'étais lycéen et je découvrais la programmation. Au départ, je voulais créer une simulation politique plus ou moins réaliste, puis j\'ai quelque peu digressé vers le domaine de la comédie, pour atteindre ce résultat final. Politic fut ma première création.</string>
    <string name="pre2">Le programme original se constituait uniquement du chapitre 3 de cette application. Encouragé par plusieurs de mes camarades, j\'ai entamé la création d\'une saga en 8 épisodes. Nombreux sont ceux à avoir tenté de devenir les maîtres du monde, de l\'univers, et plus encore. Certains ont réussi, d\'autres ont abandonné. Fort de ce premier succès, l\'idée a fait son chemin d\'en faire une application mobile. Si vous lisez ces lignes, c\'est que j\'ai atteint cet objectif.</string>
    <string name="pre3">L\'application est volontairement modeste afin de conserver l\'esprit du jeu original, qui n\'était, pour les connaisseurs, qu\'une suite de IF/ELSE.</string>
    <string name="enjoy">Enjoy!</string>
    <string name="presentation">Présentation de votre personnage</string>
    <string name="prenom">Prénom: Jean-Kévin</string>
    <string name="nom">Nom: Cuquebreuh</string>
    <string name="age">Age: 15 ans</string>
    <string name="passion">Passion: la politique</string>
    <string name="rejouer">Rejouer</string>
    <string name="retour_au_menu">Retour au menu</string>
    <string name="image_description">Image illustratrice</string>
</resources>