<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        app:fontFamily="sans-serif-smallcaps"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:fontFamily="sans-serif-smallcaps"
        android:text="@string/scenario"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valere_brable"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/conception"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valere_brable"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            android:gravity="center"/>

        <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/developement"
        app:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valere_brable"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            android:gravity="center"/>

        <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/graphismes"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valere_brable"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/sons_et_musiques"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/femti_fire"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_steps"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            android:gravity="center"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vous_etes_encore_la"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/images"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tashima_charbonnier"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harry_lunts"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vartan"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gage_skidmore"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greg_cookie"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/martin_wyss"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tobias"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/julien_dodeler"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/steven_jambot"
            app:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif-smallcaps"
            android:text="@string/yves_brette"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif-smallcaps"
            android:text="@string/valere_brable"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>