<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/histoire_politic"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/calcu"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/pre1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/pre2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/pre3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/enjoy" />

            <Button
                android:id="@+id/buttonx22"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/retour_au_menu"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>
</LinearLayout>



</ScrollView>