<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo23"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"/>

    <Button
        android:id="@+id/buttonx1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/buttonx2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/buttonx3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/buttonx4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/noter"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/logoapp"
            android:id="@+id/imageView3"
            android:contentDescription="@string/image_description"/>

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/image_description"
            ads:srcCompat="@drawable/fb" />

    </LinearLayout>

</LinearLayout>